[package]
name = "panic-write"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Write panic messages to a core::fmt::Write and then halt"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["panic-handler"]
readme = "README.md"
documentation = "https://docs.rs/panic-write"

[dependencies]
